[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/VideoOptions.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Video" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_right = 790.0
margin_bottom = 1440.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="VideoOptionsVBoxContainer" type="VBoxContainer" parent="."]
margin_left = 794.0
margin_right = 1585.0
margin_bottom = 1440.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ResolutionHBoxContainer" type="HBoxContainer" parent="VideoOptionsVBoxContainer"]
margin_top = 656.0
margin_right = 791.0
margin_bottom = 676.0

[node name="ResolutionLabel" type="Label" parent="VideoOptionsVBoxContainer/ResolutionHBoxContainer"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 17.0
text = "Resolution:"

[node name="ResolutionOptionButton" type="OptionButton" parent="VideoOptionsVBoxContainer/ResolutionHBoxContainer"]
margin_left = 762.0
margin_right = 791.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="FullscreenHBoxContainer" type="HBoxContainer" parent="VideoOptionsVBoxContainer"]
margin_top = 680.0
margin_right = 791.0
margin_bottom = 704.0

[node name="FullscreenLabel" type="Label" parent="VideoOptionsVBoxContainer/FullscreenHBoxContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Fullscreen:"

[node name="FullscreenCheckBox" type="CheckBox" parent="VideoOptionsVBoxContainer/FullscreenHBoxContainer"]
margin_left = 767.0
margin_right = 791.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="VsyncHBoxContainer" type="HBoxContainer" parent="VideoOptionsVBoxContainer"]
margin_top = 708.0
margin_right = 791.0
margin_bottom = 732.0

[node name="VsyncLabel" type="Label" parent="VideoOptionsVBoxContainer/VsyncHBoxContainer"]
margin_top = 5.0
margin_right = 41.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( -165, -53 )
text = "Vsync:"

[node name="VsyncCheckBox" type="CheckBox" parent="VideoOptionsVBoxContainer/VsyncHBoxContainer"]
margin_left = 767.0
margin_right = 791.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="FXAAHBoxContainer" type="HBoxContainer" parent="VideoOptionsVBoxContainer"]
margin_top = 736.0
margin_right = 791.0
margin_bottom = 760.0

[node name="FXAALabel" type="Label" parent="VideoOptionsVBoxContainer/FXAAHBoxContainer"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "FXAA:"

[node name="FXAACheckBox" type="CheckBox" parent="VideoOptionsVBoxContainer/FXAAHBoxContainer"]
margin_left = 767.0
margin_right = 791.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="MSAAHBoxContainer" type="HBoxContainer" parent="VideoOptionsVBoxContainer"]
margin_top = 764.0
margin_right = 791.0
margin_bottom = 784.0

[node name="MSAALabel" type="Label" parent="VideoOptionsVBoxContainer/MSAAHBoxContainer"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 17.0
text = "MSAA"

[node name="MSAAOptionButton" type="OptionButton" parent="VideoOptionsVBoxContainer/MSAAHBoxContainer"]
margin_left = 762.0
margin_right = 791.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 1589.0
margin_right = 2380.0
margin_bottom = 1440.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="VideoGridContainer" type="GridContainer" parent="."]
margin_left = 2384.0
margin_right = 2560.0
margin_bottom = 20.0
rect_min_size = Vector2( 176, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[connection signal="item_selected" from="VideoOptionsVBoxContainer/ResolutionHBoxContainer/ResolutionOptionButton" to="." method="_on_ResolutionOptionButton_item_selected"]
[connection signal="toggled" from="VideoOptionsVBoxContainer/FullscreenHBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="toggled" from="VideoOptionsVBoxContainer/VsyncHBoxContainer/VsyncCheckBox" to="." method="_on_VsyncCheckBox_toggled"]
[connection signal="toggled" from="VideoOptionsVBoxContainer/FXAAHBoxContainer/FXAACheckBox" to="." method="_on_FXAACheckBox_toggled"]
[connection signal="item_selected" from="VideoOptionsVBoxContainer/MSAAHBoxContainer/MSAAOptionButton" to="." method="_on_MSAAOptionButton_item_selected"]
